# weird-contest

./: alembic.ini  pyproject.toml
app/src/: config.py  crud.py  main.py  messages.py  models.py  service.py
app/src/alembic/: env.py
app/src/alembic/versions/: b3f480de04e5_.py
src/app/: buttons.py  config.py  crud.py  main.py  messages.py  service.py
src/app/alembic/: env.py
